# voice

./: .gitignore  .gitmodules  CLAUDE.md  CONFIGURATION.md  README.md  TESTING.md  pyproject.toml  pytest.ini  requirements-dev.txt  requirements-server.txt  requirements.txt
rust/: Cargo.toml
rust/voice-core/: Cargo.toml
rust/voice-core/src/: config.rs  conflicts.rs  database.rs  error.rs  lib.rs  merge.rs  models.rs  search.rs  sync_client.rs  sync_server.rs  tls.rs  validation.rs
rust/voice-python/: Cargo.toml
rust/voice-python/src/: lib.rs
src/: __init__.py  cli.py  main.py  tui.py  web.py
src/core/: __init__.py  audio_player.py  audiofile_manager.py  config.py  conflicts.py  database.py  merge.py  models.py  note_editor.py  search.py  sync.py  sync_client.py  timestamp_utils.py  tls.py  transcription_service.py  validation.py  waveform.py
src/ui/: audio_player_widget.py  main_window.py  note_pane.py  notes_list_pane.py  styles.py  tag_hierarchy_dialog.py  tag_management_dialog.py  tags_pane.py  transcription_dialog.py  transcription_widget.py
tests/: __init__.py  conftest.py  helpers.py  test_config.example.toml
tests/cli/: __init__.py  test_cli_args.py  test_cli_audiofiles.py  test_cli_audiofiles_edge_cases.py  test_cli_audiofiles_note_creation.py  test_cli_list.py  test_cli_search.py  test_cli_show.py
tests/display/: conftest.py  test_attachment_display_position.py
tests/gui/: __init__.py  test_notes_list_pane.py  test_search.py  test_tags_pane.py
tests/integration/: __init__.py  conftest.py  test_audiofiles_import.py  test_cross_interface.py  test_error_handling.py  test_file_storage.py  test_notes_list_pane.py  test_performance.py  test_search.py  test_sync_integration.py  test_tags_pane.py  test_workflows.py
tests/sync/: __init__.py  conftest.py  test_audiofile_binary_sync.py  test_audiofile_config_validation.py  test_audiofile_sync.py  test_sync_cli.py  test_sync_client.py  test_sync_comprehensive.py  test_sync_concurrent.py  test_sync_config.py  test_sync_conflicts.py  test_sync_dependency_order.py  test_sync_initial.py  test_sync_integration.py  test_sync_merge.py  test_sync_network_failures.py  test_sync_note_tags.py  test_sync_pagination.py  test_sync_partial_failures.py  test_sync_peer_state.py  test_sync_protocol.py  test_sync_server.py  test_sync_tls.py  test_sync_validation.py
tests/tui/: __init__.py  test_tui.py
tests/unit/: test_audiofile.py  test_audiofile_edge_cases.py  test_audiofile_manager.py  test_cache_rebuild.py  test_config.py  test_conflicts.py  test_database.py  test_edge_cases.py  test_merge.py  test_search.py  test_sync.py  test_sync_client.py  test_sync_config.py  test_tls.py  test_transcription_service.py  test_validation.py
tests/web/: __init__.py  conftest.py  test_api_audiofiles.py  test_api_audiofiles_edge_cases.py  test_api_general.py  test_api_notes.py  test_api_search.py  test_api_tags.py
