[project]
name = "voicerewrite"
version = "0.1.0"
description = "Minimal note-taking application with hierarchical tags"
requires-python = ">=3.10"
dependencies = [
    "PySide6>=6.7.0",
]

[project.optional-dependencies]
dev = [
    "mypy>=1.8.0",
    "black>=24.0.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_backend"

[tool.black]
line-length = 100
target-version = ['py310']

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
exclude = ['__pycache__', '.venv']
mypy_path = "src"
explicit_package_bases = true

[[tool.mypy.overrides]]
module = [
    "qdarktheme",
    "flask_cors",
]
ignore_missing_imports = true
