[package]
name = "voice-python"
version = "0.1.0"
edition = "2021"
authors = ["Dotan Cohen"]
description = "Python bindings for Voice Core library"

[lib]
name = "voice_core"
crate-type = ["cdylib"]

[dependencies]
# Core library from submodule
voice_core_lib = { package = "voice-core", path = "../../submodules/voice-core" }

# PyO3 for Python bindings
pyo3 = { version = "0.23", features = ["extension-module"] }

# Re-export dependencies needed for bindings
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.11", features = ["v7", "serde"] }
tokio = { version = "1.42", features = ["rt-multi-thread"] }
serde_json = "1.0"
