[package]
name = "voice-python"
version = "0.1.0"
edition = "2021"
authors = ["Dotan Cohen"]
description = "Python bindings for VoiceCore library"

[lib]
name = "voicecore"
crate-type = ["cdylib"]

[dependencies]
# Core library from submodule
voicecore_lib = { package = "voicecore", path = "../../submodules/voicecore" }

# PyO3 for Python bindings
pyo3 = { version = "0.23", features = ["extension-module"] }

# Re-export dependencies needed for bindings
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.11", features = ["v7", "serde"] }
tokio = { version = "1.42", features = ["rt-multi-thread", "signal"] }
serde_json = "1.0"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
